fix(ContactList): add text overflow

--- a/src/components/ContactList/ContactList.css
+++ b/src/components/ContactList/ContactList.css
@@ -71,6 +71,10 @@
   align-content: flex-start;
   justify-content: center;
   align-items: flex-start;
+  overflow: hidden;
+  width: 100%;
+  padding-right: calc(var(--default-padding) / 2);
+  box-sizing: border-box;
 }
 
 .name {
@@ -78,6 +82,7 @@
   font-size: 16px;
   font-weight: 500;
   line-height: 1.3;
+  @apply --text-overflow-ellipsis;
 }
 
 .about {
